# amulet

./: .gitignore  ARCHITECTURE_JA.md  CHECKLIST.md  CHECKLIST_JA.md  CHECKLIST_RUST_JA.md  Cargo.toml  DESIGN_RUST_JA.md  LICENSE  PLAN.md  PLAN_JA.md  README.md  README_JA.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  release.yml
docs/: deploy-rootless-systemd-ja.md  deploy-rootless-systemd.md  deploy-ubuntu-ja.md  deploy-ubuntu.md  deployment-ja.md  deployment.md  getting-started-ja.md  getting-started.md  security-ja.md  security.md  usage-ja.md  usage.md
legacy/: build.zig
legacy/src/: probe_id.zig
src/: crypto.rs  crypto.zig  machine_id.rs  main.rs  main.zig  probe_id.zig  vault.rs
website-svelte/src/: app.css
website-svelte/src/content/en/: usage.md
website-svelte/src/content/en/v0/: concepts.md  deploy-rootless-systemd.md  deploy-ubuntu.md  deployment.md  getting-started.md  migration-away.md  security.md  troubleshooting.md  usage.md
website-svelte/src/content/ja/v0/: concepts.md  deploy-rootless-systemd.md  deploy-ubuntu.md  deployment.md  getting-started.md  migration-away.md  security.md  troubleshooting.md  usage.md
website-svelte/src/lib/: nav.ts
website-svelte/src/lib/components/: DocsLayout.svelte  Navbar.svelte
website-svelte/src/lib/utils/: markdown.ts
website-svelte/src/routes/: +page.svelte
website-svelte/src/routes/[slug]/: +page.svelte
website-svelte/src/routes/ja/: +page.svelte
wrappers/node/: amulet.ts  package-lock.json  package.json  tsconfig.json
wrappers/node/test/: amulet.test.mjs
(+5 files in other folders)
